Fixed Printing gradebook table not respecting margins.