@@ -28,7 +28,9 @@
     <li>Previous grade doesn't get changed when in a queue. (and it turns grey)</li>
     <li>Changing assignments in the queue throws exceptions and sometimes repaints wrong.</li>
     <li>Some differences between print preview and actual print for gradebook table</li>
-    <li>print overlay isn't threaded that well</li>
+    <li>print overlay isn't threaded that well (need to thread changing pages)</li>
+    <li>ContentViewManager.setLocation doesnt work with print preview window</li>
+    <li>Changing scale really fast on gradebook print adds a ton of background tasks and doesnt remove them.</li>
 </ul>
 <h3>Visual</h3>
 <ul>
